 
    * Record a timestamp against each mutter to the trace file, relative to the
      first import of bzrlib.  (Andrew Bennetts)
     
    * ``Repository.get_data_stream`` is now deprecated in favour of
      ``Repository.get_data_stream_for_search`` which allows less network
      traffic when requesting data streams over a smart server. (Robert Collins)

    * Repository has a new method ``has_revisions`` which signals the presence
      of many revisions by returning a set of the revisions listed which are
      present. This can be done by index queries without reading data for parent
      revision names etc. (Robert Collins)

    * RemoteTransport's ``recommended_page_size`` method now returns 64k, like
      SFTPTransport and HttpTransportBase.  (Andrew Bennetts)


bzr 1.1 2008-01-15
------------------

(no changes from 1.1rc1)

bzr 1.1rc1 2008-01-05
---------------------

  CHANGES:
   
   * Dotted revision numbers have been revised. Instead of growing longer with
     nested branches the branch number just increases. (eg instead of 1.1.1.1.1
     we now report 1.2.1.) This helps scale long lived branches which have many
     feature branches merged between them. (John Arbash Meinel)

   * The syntax ``bzr diff branch1 branch2`` is no longer supported.
     Use ``bzr diff branch1 --new branch2`` instead. This change has
     been made to remove the ambiguity where ``branch2`` is in fact a
     specific file to diff within ``branch1``.

  FEATURES:

   * New option to use custom template-based formats in  ``bzr version-info``.
     (Lukáš Lalinský)

   * diff '--using' allows an external diff tool to be used for files.
     (Aaron Bentley)

   * New "lca" merge-type for fast everyday merging that also supports
     criss-cross merges.  (Aaron Bentley)

  IMPROVEMENTS:

   * ``annotate`` now doesn't require a working tree. (Lukáš Lalinský,
     #90049)

   * ``branch`` and ``checkout`` can now use files from a working tree to